force-app/main/default/objects/OCE__Call__c/fields/Affiliated_Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Prescriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliated Prescriber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calls (Affiliated Prescriber)</relationshipLabel>
    <relationshipName>Calls</relationshipName>
    <type>Lookup</type>
</CustomField>