force-app/main/default/objects/OCE__Call__c/fields/Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Call_Description__c</fullName>
    <label>Call Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>