force-app/main/default/objects/OCE__Call__c/fields/Coaching_Event__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching Event</label>
    <referenceTo>OCE__FieldCoachingEvent__c</referenceTo>
    <relationshipLabel>Calls</relationshipLabel>
    <relationshipName>Calls</relationshipName>
    <type>Lookup</type>
</CustomField>