force-app/main/default/objects/OCE__Call__c/fields/Lilly_Associated_Congress_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Associated_Congress_if_applicable__c</fullName>
    <description>Custom field for Lilly demo.</description>
    <label>Associated Congress (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(OW) Obesity Week</fullName>
            </value>
            <value>
                <fullName>(AHA) American Heart Association</fullName>
            </value>
            <value>
                <fullName>(WCIRDC) - World Congress on Insulin Resistance, Diabetes &amp; Cardiovascular Disease</fullName>
            </value>
            <value>
                <fullName>(ATTD) Advanced Technologies &amp; Treatments for Diabetes</fullName>
            </value>
            <value>
                <fullName>(ADA) American Diabetes Association</fullName>
            </value>
            <value>
                <fullName>(ECO) European Congress on Obesity</fullName>
            </value>
            <value>
                <fullName>(ASCO) American Society of Clinical Oncology</fullName>
                <isActive>false</isActive>
                <label>(ASCO) American Society of Clinical Oncology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>