force-app/main/default/objects/OCE__Call__c/fields/Lilly_Disease_Area__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Disease_Area__c</fullName>
    <description>Custom field for Lilly demo.</description>
    <label>Disease Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obesity/NILEX</fullName>
            </value>
            <value>
                <fullName>Glycemic Control</fullName>
            </value>
            <value>
                <fullName>Cardiometabolic</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
                <isActive>false</isActive>
                <label>Oncology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>