force-app/main/default/objects/OCE__Call__c/fields/Lilly_Engagement_Title__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Engagement_Title__c</fullName>
    <label>Engagement Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introductory Meeting</fullName>
            </value>
            <value>
                <fullName>General Insights Gathering</fullName>
            </value>
            <value>
                <fullName>Partnership with Lilly</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Contracted Activity - Advising - Medical</fullName>
            </value>
            <value>
                <fullName>Contracted Activity - Advising - Commercial</fullName>
            </value>
            <value>
                <fullName>Contracted Activity - Speaking - Commercial</fullName>
            </value>
            <value>
                <fullName>Contracted Activity - Speaking - Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>