force-app/main/default/objects/OCE__Call__c/fields/Lilly_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Engagement_Type__c</fullName>
    <description>Custom field for Lilly demo.</description>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted Engagement</fullName>
            </value>
            <value>
                <fullName>Non-Contracted Engagement</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
                <isActive>false</isActive>
                <label>Ad-hoc</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>