force-app/main/default/objects/OCE__Call__c/fields/Lilly_H1_HCP_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_HCP_Id__c</fullName>
    <formula>OCE__Account__r.Lilly_H1_HCP_Id__c</formula>
    <label>H1 HCP</label>
    <type>Text</type>
</CustomField>