force-app/main/default/objects/OCE__Call__c/fields/Lilly_Meeting_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Meeting_Room_Name__c</fullName>
    <label>Meeting Room Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>