force-app/main/default/objects/OCE__Call__c/fields/Lilly_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introductory Meeting</fullName>
            </value>
            <value>
                <fullName>General Insights Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>