force-app/main/default/objects/OCE__Call__c/fields/Lilly_Source__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>