force-app/main/default/objects/OCE__Call__c/fields/Lilly_Work_Day__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Work_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Day</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Work Day</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calls (Work Day)</relationshipLabel>
    <relationshipName>Calls1</relationshipName>
    <type>Lookup</type>
</CustomField>