force-app/main/default/objects/OCE__Call__c/fields/LillyPre_NegotiatedTime__c.field-meta.xml
<CustomField>
    <fullName>LillyPre_NegotiatedTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Negotiated Time</label>
    <type>Checkbox</type>
</CustomField>