force-app/main/default/objects/OCE__Call__c/fields/Med_Info_Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Med_Info_Case_Record__c</fullName>
    <label>Med Info Case Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MedInfoCase 001</fullName>
            </value>
            <value>
                <fullName>MedInfoCase 002</fullName>
            </value>
            <value>
                <fullName>MedInfoCase 003</fullName>
            </value>
            <value>
                <fullName>MedInfoCase 004</fullName>
            </value>
            <value>
                <fullName>MedInfoCase 005</fullName>
            </value>
            <value>
                <fullName>MedInfoCase 006</fullName>
            </value>
            <value>
                <fullName>MedInfoCase 007</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>