force-app/main/default/objects/OCE__Call__c/fields/Medical_Information_Letter_Requested__c.field-meta.xml
<CustomField>
    <fullName>Medical_Information_Letter_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Information Letter Requested</label>
    <type>Checkbox</type>
</CustomField>