force-app/main/default/objects/OCE__Call__c/fields/Meeting_Owner__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Owner__c</fullName>
    <label>Meeting Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>