force-app/main/default/objects/OCE__Call__c/fields/MSL_Tier__c.field-meta.xml
<CustomField>
    <fullName>MSL_Tier__c</fullName>
    <label>MSL Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>