force-app/main/default/objects/OCE__Call__c/fields/Non_Prescriber_Attendee_Role__c.field-meta.xml
<CustomField>
    <fullName>Non_Prescriber_Attendee_Role__c</fullName>
    <label>Non-Prescriber Attendee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Admin</fullName>
            </value>
            <value>
                <fullName>Care Coordinator</fullName>
            </value>
            <value>
                <fullName>Billing Manager</fullName>
            </value>
            <value>
                <fullName>Pharmacy Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>