force-app/main/default/objects/OCE__Call__c/fields/Non_Prescriber_Subrole__c.field-meta.xml
<CustomField>
    <fullName>Non_Prescriber_Subrole__c</fullName>
    <label>Non-Prescriber Subrole</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Non_Prescriber_Attendee_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OA Option 1</fullName>
            </value>
            <value>
                <fullName>OA Option 2</fullName>
            </value>
            <value>
                <fullName>CC Option 1</fullName>
            </value>
            <value>
                <fullName>CC Option 2</fullName>
            </value>
            <value>
                <fullName>BM Option 1</fullName>
            </value>
            <value>
                <fullName>BM Option 2</fullName>
            </value>
            <value>
                <fullName>PT Option 1</fullName>
            </value>
            <value>
                <fullName>PT Option 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>