force-app/main/default/objects/OCE__Call__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account the Call was made on. This is used to tie a specific Account to the Call.</description>
    <inlineHelpText>The Account the Call was made on. This is used to tie a specific Account to the Call.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calls</relationshipLabel>
    <relationshipName>Callims</relationshipName>
    <type>Lookup</type>
</CustomField>