force-app/main/default/objects/OCE__Call__c/fields/OCE__BookingStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__BookingStatus__c</fullName>
    <description>The current Booking status of the call (Proposed, Accepted, Rejected)</description>
    <inlineHelpText>The current Booking status of the call (Proposed, Accepted, Rejected)</inlineHelpText>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Retrieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>