force-app/main/default/objects/OCE__Call__c/fields/OCE__Meeting__c.field-meta.xml
<CustomField>
    <fullName>OCE__Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Meeting the Call was made from. This is used to tie a specific Meeting to the Call.</description>
    <inlineHelpText>The Meeting the call was made from. This call is associated with this Meeting.</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>OCE__Meeting__c</referenceTo>
    <relationshipLabel>Calls</relationshipLabel>
    <relationshipName>Calls</relationshipName>
    <type>Lookup</type>
</CustomField>