force-app/main/default/objects/OCE__Call__c/fields/Prescriber_Type__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Type__c</fullName>
    <formula>TEXT(OCE__Account__r.Prescriber_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prescriber Type</label>
    <type>Text</type>
</CustomField>