force-app/main/default/objects/OCE__Call__c/fields/Remaining_Spend__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Spend__c</fullName>
    <label>Remaining Spend</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>