force-app/main/default/objects/OCE__Call__c/fields/Responded_to_Unsolicited_Request__c.field-meta.xml
<CustomField>
    <fullName>Responded_to_Unsolicited_Request__c</fullName>
    <label>Responded to Unsolicited Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>