force-app/main/default/objects/OCE__Call__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <formula>TEXT(OCE__Account__r.OCE__Specialty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialty</label>
    <type>Text</type>
</CustomField>