force-app/main/default/objects/OCE__Call__c/recordTypes/Base_Layout.recordType-meta.xml
<RecordType>
    <fullName>Base_Layout</fullName>
    <active>true</active>
    <description>Base call layout</description>
    <label>Base Layout</label>
</RecordType>