force-app/main/default/objects/OCE__Call__c/recordTypes/Base_Layout_w_Sampling.recordType-meta.xml
<RecordType>
    <fullName>Base_Layout_w_Sampling</fullName>
    <active>true</active>
    <description>Base call layout with sampling</description>
    <label>Base Layout w/Sampling</label>
</RecordType>