force-app/main/default/objects/OCE__Call__c/recordTypes/Extended_Layout_2.recordType-meta.xml
<RecordType>
    <fullName>Extended_Layout_2</fullName>
    <active>true</active>
    <description>Record Type for Abbvie</description>
    <label>Extended Layout 2</label>
</RecordType>