force-app/main/default/objects/OCE__Call__c/recordTypes/Extended_Layout_Options.recordType-meta.xml
<RecordType>
    <fullName>Extended_Layout_Options</fullName>
    <active>true</active>
    <description>Call layout with all options</description>
    <label>Extended Layout Options</label>
</RecordType>