force-app/main/default/objects/OCE__Call__c/recordTypes/HTC_Hemophilia_Treatment_Center.recordType-meta.xml
<RecordType>
    <fullName>HTC_Hemophilia_Treatment_Center</fullName>
    <active>true</active>
    <label>HTC (Hemophilia Treatment Center)</label>
</RecordType>