force-app/main/default/objects/OCE__Call__c/recordTypes/Nurse_Educator_Standard.recordType-meta.xml
<RecordType>
    <fullName>Nurse_Educator_Standard</fullName>
    <active>true</active>
    <description>Standard HCP/HCO record type</description>
    <label>HCP/HCO Base</label>
</RecordType>