force-app/main/default/objects/OCE__Call__c/recordTypes/Patient_Program.recordType-meta.xml
<RecordType>
    <fullName>Patient_Program</fullName>
    <active>true</active>
    <label>Patient Program</label>
</RecordType>