force-app/main/default/objects/OCE__Call__c/recordTypes/Remote.recordType-meta.xml
<RecordType>
    <fullName>Remote</fullName>
    <active>true</active>
    <description>For Remote Engagement</description>
    <label>Remote</label>
</RecordType>