force-app/main/default/objects/OCE__Call__c/recordTypes/Remote_Detail.recordType-meta.xml
<RecordType>
    <fullName>Remote_Detail</fullName>
    <active>false</active>
    <description>For remote detailing.</description>
    <label>Remote Detail</label>
</RecordType>