force-app/main/default/objects/OCE__Call__c/recordTypes/TLMaps_Example.recordType-meta.xml
<RecordType>
    <fullName>TLMaps_Example</fullName>
    <active>true</active>
    <label>Non-Contracted Engagement</label>
</RecordType>